# SNN_conversion_QCFS

./: .gitignore  README.md  evaluate.py  funcs.py  live.py  main.py  modules.py  preprocess.py  pyproject.toml  utils.py
ImageNet/: evaluate.py  train.py
Models/: CNN.py  ResNet.py  VGG.py  __init__.py  cNet.py
Preprocess/: __init__.py  augment.py  getdataloader.py  prefetcher.py
saved_models/: test_cnn.pth
