[tool.poetry]
name = "ai-research-snn"
version = "0.1.0"
description = ""
authors = ["Robin Chan <chanr@student.ethz.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
tonic = "^1.0.19"
torchvision = "^0.12.0"
tqdm = "^4.64.0"
dv = "^1.0.10"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.4.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
